# Vibe_Coding-Projects

.qwen/: settings.json
calculator-tdd/: .gitignore  README.md  pyproject.toml
calculator-tdd/src/calculator/: __init__.py  __main__.py  cli.py
calculator-tdd/tests/: test_calculator.py  test_cli.py  test_error_handling.py
