[project]
name = "calculator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "memoona-zahur", email = "memoonazahur137@gmail.com" }
]
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = ["pytest"]

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"
